--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -2,207 +2,99 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "0aStgWSO0E0E"
-      },
+      "metadata": {},
       "source": [
-        "# **(ADD HERE THE NOTEBOOK NAME)**"
+        "# Data Collection"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "1eLEkw5O0ECa"
-      },
+      "metadata": {},
       "source": [
-        "## Objectives\n",
+        "## Objectives"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Import packages\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Set working directory\n",
         "\n",
-        "## Inputs\n",
+        "* Fetch data from Kaggle\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Prepare data\n",
         "\n",
-        "## Outputs\n",
+        "* Clean data\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "* Split data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Inputs"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Kaggle.JSON file - authentication token"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Outputs "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Generate Dataset: input/dataset/cherry_leaves\n",
         "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9uWZXH9LwoQg"
-      },
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cqP-UeN-z3i2"
-      },
-      "source": [
-        "# Change working directory"
+        "* Once you download the dataset from Kaggle, its folder structure will look like this:"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wZfF_j-Bz3i4",
-        "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MWW8E7lz3i7"
-      },
-      "source": [
-        "We want to make the parent of the current directory the new current directory\n",
-        "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
-      },
-      "outputs": [],
-      "source": [
-        "os.chdir(os.path.dirname(current_dir))\n",
-        "print(\"You set a new current directory\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M_xPk_Ijz3i-"
-      },
-      "source": [
-        "Confirm the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vz3S-_kjz3jA",
-        "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
-      },
-      "outputs": [],
-      "source": [
-        "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-mavJ8DibrcQ"
-      },
-      "source": [
-        "# Section 1"
+        "    ├── inputs\n",
+        "    │   └──cherryleaves_dataset\n",
+        "    │      └──cherry-leaves\n",
+        "    │           │\n",
+        "    │           ├── test\n",
+        "    │           │   ├── healthy\n",
+        "    │           │   └── powdery_mildew\n",
+        "    │           │\n",
+        "    │           ├── train\n",
+        "    │           │   ├── healthy\n",
+        "    │           │   └── powdery_mildew\n",
+        "    │           │\n",
+        "    │           └── validation\n",
+        "    │               ├── healthy\n",
+        "    │               └── powdery_mildew\n",
+        "    └──"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZY3l0-AxO93d"
-      },
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uFQo3ycuO-v6"
-      },
-      "source": [
-        "# Section 2"
+        "## Comments | Insights | Conclusions"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "NOTE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "* These steps prepare the data fetching, cleaning, and splitting it into subsets for machine learning. The next step is data visualization to explore and identify patterns."
       ]
     },
     {
@@ -210,39 +102,6 @@
       "metadata": {},
       "source": [
         "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ltNetd085qHf"
-      },
-      "source": [
-        "# Push files to Repo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "    # create here your folder\n",
-        "    # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "    print(e)\n"
       ]
     }
   ],
@@ -253,11 +112,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": "3.12.1",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -270,7 +127,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.12.1"
     },
     "orig_nbformat": 2
   },
