--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -443,6 +443,73 @@
       "source": [
         "---"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Data Preparation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Cleaning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Check and remove all non-image files"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def remove_non_image_file(my_data_dir):\n",
+        "    image_extension = ('.png', '.jpg', '.jpeg')\n",
+        "    folders = os.listdir(my_data_dir)\n",
+        "    for folder in folders:\n",
+        "        files = os.listdir(my_data_dir + '/' + folder)\n",
+        "        # print(files)\n",
+        "        i = []\n",
+        "        j = []\n",
+        "        for given_file in files:\n",
+        "            if not given_file.lower().endswith(image_extension):\n",
+        "                file_location = my_data_dir + '/' + folder + '/' + given_file\n",
+        "                os.remove(file_location)  # remove non image file\n",
+        "                i.append(1)\n",
+        "            else:\n",
+        "                j.append(1)\n",
+        "                pass\n",
+        "        print(f\"Folder: {folder} - has image file\", len(j))\n",
+        "        print(f\"Folder: {folder} - has non-image file\", len(i))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Folder: powdery_mildew - has image file 2104\n",
+            "Folder: powdery_mildew - has non-image file 0\n",
+            "Folder: healthy - has image file 2104\n",
+            "Folder: healthy - has non-image file 0\n"
+          ]
+        }
+      ],
+      "source": [
+        "remove_non_image_file(my_data_dir='inputs/cherryleaves_dataset/cherry-leaves')"
+      ]
     }
   ],
   "metadata": {
