Data Collection: Push files to Repo code

--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -606,6 +606,41 @@
       "source": [
         "---"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Push files to Repo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* If necessary, uncomment code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import os\n",
+        "# try:\n",
+        "#     # create here your folder\n",
+        "#     # os.makedirs(name='')\n",
+        "# except Exception as e:\n",
+        "#     print(e)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
     }
   ],
   "metadata": {
