--- a/jupyter_notebooks/DataVisualization.ipynb
+++ b/jupyter_notebooks/DataVisualization.ipynb
@@ -146,11 +146,50 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca383ce",
+   "metadata": {},
+   "source": [
+    "# Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "08611d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns \n",
+    "import joblib\n",
+    "sns.set_style('white')\n",
+    "from matplotlib.image import imread"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "3.12.1",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
