Data visualization: Set working direction

--- a/jupyter_notebooks/DataVisualization.ipynb
+++ b/jupyter_notebooks/DataVisualization.ipynb
@@ -171,6 +171,65 @@
     "sns.set_style('white')\n",
     "from matplotlib.image import imread"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "025f51c6",
+   "metadata": {},
+   "source": [
+    "## Set working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dc4cec40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd= os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "008e0dd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You set a new current directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir('/workspaces/Mildew-detection-in-cherry-leaves')\n",
+    "print(\"You set a new current directory\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "426ee617",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/Mildew-detection-in-cherry-leaves'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "work_dir = os.getcwd()\n",
+    "work_dir"
+   ]
   }
  ],
  "metadata": {
