--- a/jupyter_notebooks/DataVisualization.ipynb
+++ b/jupyter_notebooks/DataVisualization.ipynb
@@ -230,6 +230,62 @@
     "work_dir = os.getcwd()\n",
     "work_dir"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7b0689e",
+   "metadata": {},
+   "source": [
+    "## Set input directories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02822c96",
+   "metadata": {},
+   "source": [
+    "* Set train path\n",
+    "* Set validation path\n",
+    "* set test path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5716f62e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data_dir = 'inputs/cherryleaves_dataset/cherry-leaves'\n",
+    "train_path = my_data_dir + '/train' \n",
+    "val_path = my_data_dir + '/validation'\n",
+    "test_path = my_data_dir + '/test'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e245e48",
+   "metadata": {},
+   "source": [
+    "## Set output directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "96197c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "version = 'v1'\n",
+    "file_path = f'outputs/{version}'\n",
+    "\n",
+    "if 'outputs' in os.listdir(work_dir) and version in os.listdir(work_dir + '/outputs'):\n",
+    "    print('Old version is already available create a new version.')\n",
+    "    pass\n",
+    "else:\n",
+    "    os.makedirs(name=file_path)"
+   ]
   }
  ],
  "metadata": {
