Data visualization: Set label names

--- a/jupyter_notebooks/DataVisualization.ipynb
+++ b/jupyter_notebooks/DataVisualization.ipynb
@@ -286,6 +286,33 @@
     "else:\n",
     "    os.makedirs(name=file_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64e2548",
+   "metadata": {},
+   "source": [
+    "## Set label names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "43da924e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label for the images are ['powdery_mildew', 'healthy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = os.listdir(train_path)\n",
+    "print('Label for the images are', labels)"
+   ]
   }
  ],
  "metadata": {
