Modelling and Evaluating: Set working directory

--- a/jupyter_notebooks/Modelling And Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling And Evaluating.ipynb
@@ -199,6 +199,65 @@
     "import seaborn as sns \n",
     "from matplotlib.image import imread"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "438be684",
+   "metadata": {},
+   "source": [
+    "## Set working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff7f83fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd = os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "56d18f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You set a new current directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir('/workspaces/Mildew-detection-in-cherry-leaves')\n",
+    "print(\"You set a new current directory\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "99f06ce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/Mildew-detection-in-cherry-leaves'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "work_dir = os.getcwd()\n",
+    "work_dir"
+   ]
   }
  ],
  "metadata": {
