--- a/jupyter_notebooks/Modelling And Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling And Evaluating.ipynb
@@ -258,6 +258,70 @@
     "work_dir = os.getcwd()\n",
     "work_dir"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "290df6c6",
+   "metadata": {},
+   "source": [
+    "## Set input directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1027bac3",
+   "metadata": {},
+   "source": [
+    "* Set train path\n",
+    "* Set validation path\n",
+    "* Set test path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e78a3d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data_dir = 'inputs/cherryleaves_dataset/cherry-leaves'\n",
+    "train_path = my_data_dir + '/train' \n",
+    "val_path = my_data_dir + '/validation'\n",
+    "test_path = my_data_dir + '/test'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4441adc2",
+   "metadata": {},
+   "source": [
+    "## Set output directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5baf2a6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old version is already available create a new version.\n"
+     ]
+    }
+   ],
+   "source": [
+    "version = 'v1'\n",
+    "file_path = f'outputs/{version}'\n",
+    "\n",
+    "if 'outputs' in os.listdir(work_dir) and version in os.listdir(work_dir + '/outputs'):\n",
+    "    print('Old version is already available create a new version.')\n",
+    "    pass\n",
+    "else:\n",
+    "    os.makedirs(name=file_path)"
+   ]
   }
  ],
  "metadata": {
