Modelling and Evaluating: Set label and image shape

--- a/jupyter_notebooks/Modelling And Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling And Evaluating.ipynb
@@ -322,6 +322,73 @@
     "else:\n",
     "    os.makedirs(name=file_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ab02b4",
+   "metadata": {},
+   "source": [
+    "## Set Label names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e7e1fb2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label for the images are ['powdery_mildew', 'healthy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = os.listdir(train_path)\n",
+    "print('Label for the images are', labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f8df64",
+   "metadata": {},
+   "source": [
+    "## Set image shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5406692c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 256, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "version = 'v1'\n",
+    "image_shape = joblib.load(filename=f\"outputs/{version}/image_shape.pkl\")\n",
+    "image_shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce21e91",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
