Modelling and Evaluating: Image count

--- a/jupyter_notebooks/Modelling And Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling And Evaluating.ipynb
@@ -389,6 +389,61 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3894d675",
+   "metadata": {},
+   "source": [
+    "# Images distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "764d7c37",
+   "metadata": {},
+   "source": [
+    "## Count number of images per set and label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9dc0ffeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* train - powdery_mildew: 1472 images\n",
+      "* train - healthy: 1472 images\n",
+      "* test - powdery_mildew: 422 images\n",
+      "* test - healthy: 422 images\n",
+      "* validation - powdery_mildew: 210 images\n",
+      "* validation - healthy: 210 images\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "rows = []\n",
+    "for folder in ['train', 'test', 'validation']:\n",
+    "    for label in labels:\n",
+    "        count = len(os.listdir(os.path.join(my_data_dir, folder, label)))\n",
+    "        rows.append({\n",
+    "            'Set': folder,\n",
+    "            'Label': label,\n",
+    "            'Count': count\n",
+    "        })\n",
+    "        print(f\"* {folder} - {label}: {count} images\")\n",
+    "\n",
+    "df_freq = pd.DataFrame(rows)\n",
+    "print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
