Modelling and Evaluating: ImageDataGen and Batch set

--- a/jupyter_notebooks/Modelling And Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling And Evaluating.ipynb
@@ -1507,6 +1507,77 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0e61801",
+   "metadata": {},
+   "source": [
+    "# Image Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b0488f5",
+   "metadata": {},
+   "source": [
+    "## Import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6a7498b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.src.legacy.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfef52f1",
+   "metadata": {},
+   "source": [
+    "## Initialize ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bcd5d48b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "augmented_image_data = ImageDataGenerator(rotation_range=20,\n",
+    "                                          width_shift_range=0.10,\n",
+    "                                          height_shift_range=0.10,\n",
+    "                                          shear_range=0.1,\n",
+    "                                          zoom_range=0.1,\n",
+    "                                          horizontal_flip=True,\n",
+    "                                          vertical_flip=True,\n",
+    "                                          fill_mode='nearest',\n",
+    "                                          rescale=1./255\n",
+    "                                          )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e86eae6e",
+   "metadata": {},
+   "source": [
+    "## Set Batch Size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ccb9c51c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 16"
+   ]
   }
  ],
  "metadata": {
