--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%load_ext pycodestyle_magic\n",
+        "%pycodestyle_on"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
